# FlexGEMM

./: README.md  pyproject.toml  setup.py
flex_gemm/kernels/cuda/: ext.cpp
flex_gemm/kernels/cuda/grid_sample/: grid_sample.cu  grid_sample.h
flex_gemm/kernels/cuda/hash/: api.h  hash.cu  hash.cuh
flex_gemm/kernels/cuda/serialize/: api.cu  api.h  hilbert.h  utils.h  z_order.h
flex_gemm/kernels/cuda/spconv/: neighbor_map.cu  neighbor_map.h
flex_gemm/kernels/triton/spconv/: __init__.py  config.py  sparse_submanifold_conv_bwd_implicit_gemm.py  sparse_submanifold_conv_bwd_implicit_gemm_splitk.py  sparse_submanifold_conv_bwd_masked_implicit_gemm.py  sparse_submanifold_conv_bwd_masked_implicit_gemm_splitk.py  sparse_submanifold_conv_fwd_implicit_gemm.py  sparse_submanifold_conv_fwd_implicit_gemm_splitk.py  sparse_submanifold_conv_fwd_masked_implicit_gemm.py  sparse_submanifold_conv_fwd_masked_implicit_gemm_splitk.py
flex_gemm/ops/: __init__.py  serialize.py  utils.py
flex_gemm/ops/grid_sample/: grid_sample.py  grid_sample_torch.py
flex_gemm/ops/spconv/: submanifold_conv3d.py
tests/: grid_sample.py  hashmap.py  neighbor_cache.py  serialize.py  spconv_bwd.py  spconv_fwd.py  spconv_inf_ablation.py  spconv_inf_benchmark.py  spconv_train_ablation.py  spconv_train_benchmark.py  utils.py
